# piecemaker

./: .dockerignore  .flake8  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  buildout.cfg  install-libspatialindex.sh  notes.txt  piecemaker.sh  pip-audit.sh  pip-requirements.txt  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  security-issues-from-bandit.csv  setup.py  update-dep-run-audit.sh  update-dep.Dockerfile  update-dep.sh
.github/: FUNDING.yml
docs/: README.md
src/piecemaker/: __init__.py  _version.py  adjacent.py  base.py  cut_proof.py  distribution.py  lines_svg.py  reduce.py  script.py  sprite.py  sprite_proof.py  sprite_raster_proof.py  sprite_vector_proof.py  table_proof.py  table_proof_canvas.js  tools.py
src/piecemaker/glue/: README.md  compat.py  core.py  exceptions.py  helpers.py
src/piecemaker/glue/algorithms/: __init__.py  square.py
src/piecemaker/glue/formats/: __init__.py  base.py  img.py
src/piecemaker/glue/managers/: __init__.py  base.py  simple.py
src/piecemaker/paths/: __init__.py  bitnubs.py  interlockingnubs.py  stochasticnubs.py
